force-app/main/default/objects/JetsonDR_Channel_Admins__c/JetsonDR_Channel_Admins__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Jeston DR Channel Admin mappings based on Country Code</description>
    <label>Jetson DR : Channel Admins</label>
</CustomObject>