force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_ANZ__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_ANZ__c</fullName>
    <description>Jetson Channel Admin for  Australia; New Zealand</description>
    <inlineHelpText>Jetson Channel Admin for  Australia; New Zealand</inlineHelpText>
    <label>Jetson_Admin_ANZ</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>