force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_ChinaAndHK__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_ChinaAndHK__c</fullName>
    <description>Jetson Channel Admin for China and Hong Kong</description>
    <inlineHelpText>Jetson Channel Admin for China and Hong Kong</inlineHelpText>
    <label>Jetson_Admin_ChinaAndHK</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>