force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_EMEA__c</fullName>
    <description>Jetson Channel Admin for Belgium; Denmark; Finland; France; Iceland; Ireland; Israel; Italy; Norway; Spain; Sweden; The Netherlands; United Arab Emirates; United Kingdom; Lithuania; Austria; Czech Republic; Germany; Switzerland; Turkey; Poland, Hungary</description>
    <inlineHelpText>Jetson Channel Admin for Belgium; Denmark; Finland; France; Iceland; Ireland; Israel; Italy; Norway; Spain; Sweden; The Netherlands; United Arab Emirates; United Kingdom; Lithuania; Austria; Czech Republic; Germany; Switzerland; Turkey; Poland, Hungary</inlineHelpText>
    <label>Jetson_Admin_EMEA</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>