force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_EMEA_DE__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_EMEA_DE__c</fullName>
    <description>SDS-1757: Sales: Update Tegra Embedded Channel Admin for France and Germany</description>
    <label>Jetson_Admin_EMEA_DE</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>