force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_JP__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_JP__c</fullName>
    <description>Jetson Channel Admin for Japan</description>
    <inlineHelpText>Jetson Channel Admin for Japan</inlineHelpText>
    <label>Jetson_Admin_JP</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>