force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_KR__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_KR__c</fullName>
    <description>Jetson Channel Admin for Korea, Republic of</description>
    <label>Jetson_Admin_KR</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>