force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_MYTHIDTW__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_MYTHIDTW__c</fullName>
    <description>Jetson Channel Admin for Singapore; Malaysia; Thailand; Indonesia; Taiwan</description>
    <inlineHelpText>Jetson Channel Admin for Singapore; Malaysia; Thailand; Indonesia; Taiwan</inlineHelpText>
    <label>Jetson_Admin_MYTHIDTW</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>