force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_Other__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_Other__c</fullName>
    <description>Jetson channel admin for other countries</description>
    <inlineHelpText>Jetson channel admin for other countries</inlineHelpText>
    <label>Jetson_Admin_Other</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>