force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_RU__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_RU__c</fullName>
    <description>Jetson Channel Admin for Russia Federation</description>
    <inlineHelpText>Jetson Channel Admin for Russia Federation</inlineHelpText>
    <label>Jetson_Admin_RU</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>