force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_Admin_US__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Admin_US__c</fullName>
    <description>Jetson Channel Admin for US, Canada, Brazil</description>
    <inlineHelpText>Jetson Channel Admin for US, Canada, Brazil</inlineHelpText>
    <label>Jetson_Admin_US</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>