force-app/main/default/objects/JetsonDR_Channel_Admins__c/fields/Jetson_DealReg_Ower__c.field-meta.xml
<CustomField>
    <fullName>Jetson_DealReg_Ower__c</fullName>
    <description>Jetson Deal Registration Lead Owner</description>
    <inlineHelpText>Jetson Deal Registration Lead Owner</inlineHelpText>
    <label>Jetson_DealReg_Ower</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>